--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -1,14 +1,56 @@
-scrape_configs:
-- job_name: cadvisor
-  scrape_interval: 5s
-  static_configs:
-  - targets:
-    - cadvisor:8080
+global:
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
+# Chargement des regles d'alertes
+rule_files:
+  - "alert_rules.yml"
 
-# Alertmanager configuration
+# Configuration des alertes
 alerting:
   alertmanagers:
     - static_configs:
         - targets:
           - alertmanager:9093
+
+# Configuration des jobs de collecte
+scrape_configs:
+  # Metriques cAdvisor (conteneurs)
+  - job_name: cadvisor
+    scrape_interval: 5s
+    static_configs:
+    - targets:
+      - cadvisor:8080
+
+  # Metriques Traefik
+  - job_name: traefik
+    scrape_interval: 10s
+    static_configs:
+    - targets:
+      - traefik:8080
+    metrics_path: /metrics
+
+  # Metriques OAuth2-Proxy (si activees)
+  - job_name: oauth2-proxy
+    scrape_interval: 15s
+    static_configs:
+    - targets:
+      - oauth2-proxy:4180
+    metrics_path: /metrics
+
+  # Metriques PostgREST (via probe)
+  - job_name: postgrest-probe
+    scrape_interval: 30s
+    static_configs:
+    - targets:
+      - postgrest:3000
+    metrics_path: /
+    params:
+      format: ['json']
+
+  # Auto-monitoring Prometheus
+  - job_name: prometheus
+    scrape_interval: 10s
+    static_configs:
+    - targets:
+      - localhost:9090
